--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <h2 class="mb-5 text-center text-uppercase fs-5">Clara Echeverría</h2>
 
-                    <p class="lead">Reemplaza este párrafo con un texto introductorio sobre SVG, de una extensión máxima de cien palabras. En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son indicaciones. Imagina que el editor de código fuente te está indicando: En el lenguaje que reconozco, esto es algo que no debes confundir con eso.</p>
+                    <p class="lead">SVG (Scalable Vector Graphics) es un lenguaje que se utiliza para representar gráficos, logotipos e imágenes. Es muy recomendable para web, ya que es un formato vectorial abierto, estándar y basado en XML, por lo que funciona en todos los navegadores. Es escalable, pesa poco y permite una definición mayor a tamaños reducidos. </p>
                 </div>
             </div>
         </header>
@@ -36,7 +36,7 @@
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                         <h2 class="text-center mt-5">GRÁFICA NO FIGURATIVA</h2>
                         <h3 class="text-center my-3">svg como src de un elemento img</h3>
-                        <p>Reemplaza este párrafo con un texto que explique de que trata la gráfica que sigue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Agrega que el SVG que sigue es tratado tal como se podría tratar a una imagen rasterizada.</p>
+                        <p>En este gráfico se visualiza la base de datos del contenido de Netflix. Diviéndolo por lo género y representando la cantidad de películas o series que hay de cada uno. </p>
                     </div>
                     <figure class="shadow-sm col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
                         <img loading="lazy" src="img/nofig1.svg" class="w-100" alt="describe lo que se ve en la imagen" />
@@ -44,7 +44,7 @@
                     </figure>
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                         <h3 class="text-center mt-5 mb-3">svg como data de un elemento object</h3>
-                        <p>Reemplaza este párrafo con un texto que explique de que trata la gráfica que sigue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Agrega que el SVG que sigue es tratado a modo distinto de una imagen rastarizada.</p>
+                        <p>La siguiente gráfica muestra distintos tipos de orquesta, la cantidad de instrumentos que participan dentro de estas y los grupos de instrumento (por ejemplo, de viento, de percusión, etc).</p>
                     </div>
                     <figure class="shadow-sm col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
                         <object type="image/svg+xml" data="img/nofig2.svg">Acá se vería una gráfica</object>
@@ -52,7 +52,7 @@
                     </figure>
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                         <h3 class="text-center mt-5 mb-3">svg como svg</h3>
-                        <p>Reemplaza este párrafo con un texto que explique de que trata la gráfica que sigue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Agrega que el SVG que sigue está entre líneas del HTML.</p>
+                        <p>Esta es una representación de algunas de las ciudades más populares del mundo, poniendo atención al país al que pertenecen. Por ejemplo, se puede ver que el Asia es el continente donde estan la mayoría de las ciudades con mayor número de habitantes. </p>
                     </div>
                     <figure class="shadow-sm col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
                       <svg xmlns="http://www.w3.org/2000/svg" width="1100" height="900">
@@ -858,7 +858,7 @@
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                         <h2 class="text-center mt-5">GRÁFICA FIGURATIVA</h2>
                         <h3 class="text-center my-3">svg como data de un elemento object</h3>
-                        <p>Reemplaza este párrafo con un texto que explique de que trata la selección que han preparado con 6 gráficas figurativas. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p>Esta una selección de 6 íconos de emojis de mujeres en distintos puestos de trabajo, descargados desde la página web de OpenMoji.</p>
                     </div>
                     <div class="col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
                         <div class="row shadow-sm mb-4">
@@ -883,7 +883,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto mb-5">
-                        <p>Reemplaza este párrafo con un texto de cierre sobre el uso de SVG. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar, nisi eget finibus luctus, nisi purus rutrum urna, et vulputate lorem justo tempor nisl.</p>
+                        <p>El uso del formato SVG trae muchas ventajas, ya que permite scalar imágenes sin perder calidad y de un peso muy pequeño. Además de ser legible para todos los sistemas de operación siendo formato XML (Extensible Markup Language).</p>
                     </div>
                 </div>
             </section>
