--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p>Esta es una representación de algunas de las ciudades más populares del mundo, poniendo atención al país al que pertenecen. Por ejemplo, se puede ver que el Asia es el continente donde estan la mayoría de las ciudades con mayor número de habitantes. </p>
                     </div>
                     <figure class="shadow-sm col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="1100" height="900">
+                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1100 900">
     <rect width="1100" height="900" x="0" y="0" fill="#FFFFFF" id="backgorund" />
     <g transform="translate(20,20)" id="viz">
         <g id="nodes">
